fix layout bug

--- a/portfolio-website/src/components/HomeFooter/hmFt.module.css
+++ b/portfolio-website/src/components/HomeFooter/hmFt.module.css
@@ -40,7 +40,7 @@
 
 /* contact */
 .textFlex {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -111,7 +111,7 @@
     font-size: 10.5vw;
   }
   .text2Wrapper > .textInner {
-    font-size: 7.2vw;
+    font-size: 6.2vw;
   }
   .textFlex {
     gap: 9vh;
