--- a/portfolio-website/src/pages/Home2/home.module.css
+++ b/portfolio-website/src/pages/Home2/home.module.css
@@ -1,7 +1,7 @@
 .page {
-  height: fit-content;
-  width: 100vw;
   position: relative;
+  height: 190vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -43,6 +43,9 @@
   transition: font-size 750ms ease-out;
 }
 /* section 2 - projects */
+.sectionRight {
+  position: relative;
+}
 .projects {
   position: absolute;
   bottom: 0;
@@ -72,8 +75,12 @@
   }
 }
 @media (max-width: 820px) {
+  .page {
+    flex-direction: column;
+  }
   .pageOne {
     flex-direction: column;
+    height: 175vh;
   }
   .pageOne > section {
     width: 100%;
